objects/Visitation_Logistics__c.object
<CustomObject>
    <description>This object is used to store logistics and hospitality details for Customer Visitation .</description>
    <fields>
        <fullName>AM_Beverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Beverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breakfast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakfast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Time__c</fullName>
        <label>Delivery Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Time_for_AM__c</fullName>
        <label>Delivery Time for AM</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Time_for_Lunch__c</fullName>
        <label>Delivery Time for Lunch</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Time_for_PM__c</fullName>
        <label>Delivery Time for PM</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_BF__c</fullName>
        <label>Multi-day Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_for_AM__c</fullName>
        <label>Details for AM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_for_Lunch__c</fullName>
        <label>Details for Lunch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_for_PM__c</fullName>
        <label>Details for PM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_meals_BF__c</fullName>
        <label>No of People</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_meals_for_AM__c</fullName>
        <label># of meals for AM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_meals_for_Lunch__c</fullName>
        <label># of meals for Lunch</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_meals_for_PM__c</fullName>
        <label># of meals for PM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Beverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Beverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Diet_AM__c</fullName>
        <label>Special Diet AM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Gluten-Free</fullName>
                </value>
                <value>
                    <fullName>Paleo</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Diet_BreakFast__c</fullName>
        <label>Special Diet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Gluten-Free</fullName>
                </value>
                <value>
                    <fullName>Paleo</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Diet_for_Lunch__c</fullName>
        <label>Special Diet for Lunch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Gluten-Free</fullName>
                </value>
                <value>
                    <fullName>Paleo</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Diet_for_PM__c</fullName>
        <label>Special Diet for PM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Gluten-Free</fullName>
                </value>
                <value>
                    <fullName>Paleo</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitation</label>
        <referenceTo>Visitation_Record__c</referenceTo>
        <relationshipLabel>Visitation Logistics</relationshipLabel>
        <relationshipName>Visitation_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visitation Logistic</label>
    <nameField>
        <label>Visitation Logistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitation Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>